# Pong-Game

./: CMakeLists.txt  build.sh  buildDebug.sh  buildWeb.sh  run.sh  runDebug.sh
resources/: pong.ini
src/: main.cpp
src/GUI/: Button.hpp  ButtonStyle.hpp  Container.hpp  ElementPosition.hpp  GUIElement.hpp  GUIElementInteractive.hpp  Layout.cpp  Layout.hpp  Style.hpp  Types.hpp
src/Scenes/: README.md  Scene.hpp
src/Scenes/Header/: MainMenu.hpp  Pong.hpp
src/Util/: SceneManager.hpp
src/Util/Parsers/: INIReader.hpp  INIWriter.hpp  test  test.cpp  test.ini  test.sh
